--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -3,6 +3,7 @@
   --bg2      : #F4F5F6;
   --bg3      : #fff;
   --font-base: 'Inter', arial, helvetica, sans-serif;
+  --font-alt : adonisc, 'Times New Roman', Times, serif;
 
 }
 
@@ -40,8 +41,122 @@ body {
   .is-active-enabled:not(:is(.toggle-active, .active)) {
     display: none;
   }
+
+  .title {
+    font-family: var(--font-alt);
+    font-size  : 48px;
+    line-height: 1.1;
+
+    @media (max-width:theme('screens.xl')) {
+      font-size: 40px;
+    }
+
+    @media (max-width:theme('screens.md')) {
+      font-size: 32px;
+    }
+  }
+
+  .slider-pagination {
+    --swiper-pagination-color: #000;
+
+    position : relative;
+    top      : auto !important;
+    bottom   : auto !important;
+    left     : auto !important;
+    transform: none !important;
+
+
+  }
 }
 
+.header {
+  display              : grid;
+  align-items          : center;
+  grid-template-columns: 1fr auto 1fr;
+  padding-top          : 15px;
+
+  @media (max-width:theme('screens.sm')) {
+    padding-top: 8px;
+  }
+
+  &-nav {
+    display    : flex;
+    align-items: center;
+    gap        : 64px;
+  }
+
+  &-contacts {
+    display    : flex;
+    align-items: center;
+  }
+}
+
+.started {
+  display    : flex;
+  align-items: center;
+  height     : 768px;
+  gap        : 100px;
+
+  @media (max-width:theme('screens.lg')) {
+    flex-direction: column;
+    height        : auto;
+    gap           : 20px;
+  }
+
+  @media (max-width:theme('screens.sm')) {
+    padding-top   : 8px;
+    padding-bottom: 8px;
+  }
+
+  &-content {
+    display        : flex;
+    justify-content: center;
+    flex-direction : column;
+  }
+
+  &-content-slider {
+    width: calc(50% - 50px);
+
+    @media (max-width:theme('screens.lg')) {
+      display       : flex;
+      flex-direction: column;
+      width         : 100%;
+
+      .slider-pagination {
+        order: -1;
+      }
+    }
+  }
+
+  &-image {
+    align-self: center;
+    margin    : auto;
+    padding   : 32px;
+
+    background: #FFF;
+    border    : 9px solid #2B2B2B;
+
+    box-shadow: 12px 12px 5px 0 rgba(0, 0, 0, 0.2) inset, 0 5px 9px 0 rgba(0, 0, 0, 0.25);
+
+    @media (max-width:theme('screens.sm')) {
+      padding     : 20px;
+      border-width: 5px;
+      box-shadow  : 6px 6px 5px 0 rgba(0, 0, 0, 0.2) inset, 0 4px 6px 0 rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  &-image-slider {
+    width: calc(50% - 50px);
+
+
+    @media (max-width:theme('screens.lg')) {
+      order    : -1;
+      width    : 300px;
+      max-width: 100%;
+    }
+  }
+
+}
 
 .curtains-canvas {
   position      : fixed;
@@ -55,7 +170,14 @@ body {
 
 
 .interior {
-  position: relative;
+  position      : relative;
+  padding-top   : 82px;
+  padding-bottom: 82px;
+
+  @media (max-width:theme('screens.md')) {
+    padding-top   : 42px;
+    padding-bottom: 32px;
+  }
 
   &-plane {
     position  : absolute;
@@ -64,7 +186,7 @@ body {
     max-height: 340px;
 
     img {
-      display: none;
+      // display: none;
     }
   }
 
@@ -72,15 +194,281 @@ body {
     display       : flex;
     align-items   : center;
     flex-direction: column;
-    padding       : 58px 42px;
+    position      : relative;
+    padding       : 58px 42px 32px;
     background    : linear-gradient(180deg, #EEE 0%, rgba(238, 238, 238, 0.50) 100%);
+    text-align    : center;
     break-inside  : avoid-column;
 
+    @media (max-width:theme('screens.md')) {
+      padding: 15px;
+    }
+
     &-plane {
+      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+
       img {
-        opacity: 0;
+        // opacity: 0;
+      }
+    }
+
+    &-hover {
+      display        : flex;
+      align-items    : center;
+      justify-content: flex-end;
+      flex-direction : column;
+      position       : absolute;
+      inset          : 0;
+      overflow       : hidden;
+      padding        : 40px 20px;
+      transition     : .25s;
+
+      &-gradient {
+        position  : absolute;
+        inset     : 0;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 100%);
+        opacity   : 0.8;
+      }
+
+      img {
+        position  : absolute;
+        top       : 0;
+        left      : 0;
+        width     : 100%;
+        height    : 100%;
+        transition: .25s;
+        object-fit: cover;
+      }
+    }
+
+    &:not(:hover) &-hover {
+      opacity: 0;
+
+      img {
+        transform: scale(1.1);
+      }
+
+      &-btn {
+        transform: translateY(30px);
       }
     }
   }
 
+}
+
+.about-bg {
+  position  : absolute;
+  inset     : 0;
+  overflow  : hidden;
+  background: url("../img/about-bg/bg.png") no-repeat center/ cover, #B6A380;
+
+  &-grid {
+    display              : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    position             : absolute;
+    top                  : 50%;
+    left                 : 50%;
+    width                : 110%;
+    transform            : translate(-50%, -50%) rotate(30deg);
+    gap                  : 32px;
+  }
+
+  &-item {
+    padding   : 45px;
+    background: #FFF;
+    border    : 15px solid #2B2B2B;
+    box-shadow: 18px 18px 8px 0 rgba(0, 0, 0, 0.40) inset, 0 8px 15px 0 rgba(0, 0, 0, 0.25);
+  }
+}
+
+.about {
+  padding-top   : 48px;
+  padding-bottom: 48px;
+
+  @media (max-width:theme('screens.sm')) {
+    padding-top   : 40px;
+    padding-bottom: 40px;
+  }
+
+  &-content {
+    position  : relative;
+    width     : 490px;
+    max-width : 100%;
+    padding   : 80px 20px;
+    background: #000;
+    color     : #fff;
+
+    &::before {
+      content       : '';
+      position      : absolute;
+      inset         : 16px;
+      border        : 1px solid #FFF;
+      opacity       : 0.3;
+      pointer-events: none;
+
+      @media (max-width:theme('screens.xl')) {
+        inset: 8px;
+      }
+    }
+
+    @media (max-width:theme('screens.sm')) {
+      padding: 40px 15px;
+
+    }
+  }
+}
+
+.slider {
+  overflow      : hidden;
+  padding-top   : 82px;
+  padding-bottom: 82px;
+  background    : url("../img/slider-bg.jpg") no-repeat center / cover, #73A4A7;
+
+  @media (max-width:theme('screens.sm')) {
+    padding-top   : 16px;
+    padding-bottom: 16px;
+  }
+
+  &-item {
+    display : flex;
+    position: relative;
+    gap     : 30px;
+
+    @media (max-width:theme('screens.xl')) {
+      flex-direction: column;
+      gap           : 0;
+    }
+
+    &-prev {
+      right: calc(100% + 32px);
+    }
+
+    &-next {
+      left: calc(100% + 32px);
+    }
+
+    &-prev,
+    &-next {
+      position : absolute;
+      top      : calc(50% - 56px / 2);
+      font-size: 56px;
+      color    : #fff;
+
+      @media (max-width:theme('screens.xl')) {
+        display: none;
+      }
+    }
+  }
+
+  &-content-swiper {
+    width: calc(2 * 100% / 3 - 15px);
+
+    @media (max-width:theme('screens.xl')) {
+      width   : 100%;
+      overflow: visible;
+    }
+  }
+
+  &-product-swiper {
+    width: calc(100% / 3 - 15px);
+
+    @media (max-width:theme('screens.xl')) {
+      order   : -1;
+      width   : 100%;
+      overflow: visible;
+    }
+  }
+
+  &-content {
+    position  : relative;
+    padding   : 80px 20px;
+    background: #000;
+    color     : #fff;
+
+    &::before {
+      content       : '';
+      position      : absolute;
+      inset         : 16px;
+      border        : 1px solid #FFF;
+      opacity       : 0.3;
+      pointer-events: none;
+
+      @media (max-width:theme('screens.xl')) {
+        inset: 8px;
+      }
+    }
+
+    @media (max-width:theme('screens.xl')) {
+      padding: 40px;
+    }
+
+    @media (max-width:theme('screens.sm')) {
+      padding: 40px 20px;
+    }
+  }
+
+  &-product {
+    padding   : 58px 20px;
+    background: #fff;
+
+    @media (max-width:theme('screens.xl')) {
+      padding: 32px 15px;
+
+      .interior-item-plane {
+        height: 250px;
+
+        img {
+          max-height: 100%;
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  display        : flex;
+  align-items    : center;
+  justify-content: space-between;
+  margin-top     : auto;
+  padding-top    : 10px;
+  padding-bottom : 10px;
+  background     : #000;
+  color          : #fff;
+}
+
+.menu {
+  position: fixed;
+  top     : 0;
+  left    : 0;
+
+  left        : -80px;
+  width       : 430px;
+  max-width   : calc(100% + 60px);
+  height      : 100%;
+  padding     : 16px;
+  padding-left: 96px;
+  background  : #fff;
+  box-shadow  : 0 0 24px rgba(0, 0, 0, 0.5);
+  transition  : 1s cubic-bezier(.28, 1.66, .26, 1);
+  z-index     : theme('zIndex[5]');
+  clip-path   : polygon(120% 0%, 0% 0%, 0% 100%, 120% 100%);
+
+  &:not(.toggle-active) {
+    transform: translateX(-80px);
+    clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+  }
+
+
+  &-shadow {
+    position  : fixed;
+    inset     : 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: .5s;
+    z-index   : theme('zIndex[4]');
+  }
+
+  &:not(.toggle-active)~&-shadow {
+    opacity       : 0;
+    pointer-events: none;
+  }
 }
