--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -13,18 +13,6 @@
   --bg3: #323232;
 }
 
-body {
-  display       : flex;
-  flex-direction: column;
-  min-height    : 100vh;
-  background    : var(--bg3);
-
-  * {
-    font-family: var(--font-base);
-  }
-
-}
-
 @layer components {
   .active-enabled:not(:is(:is(.toggle-active, .tab-active, .active) .active-enabled)) {
     display: none !important;
@@ -69,14 +57,44 @@ body {
   }
 }
 
+body {
+  display       : flex;
+  flex-direction: column;
+  min-height    : 100vh;
+  padding-top   : 106px;
+  background    : var(--bg3);
+
+  @media (max-width:theme('screens.lg')) {
+    padding-top: 72px;
+  }
+
+  * {
+    font-family: var(--font-base);
+  }
+
+  &.menu-opened {
+    overflow: hidden;
+  }
+}
+
 .header {
   display              : grid;
   align-items          : center;
   grid-template-columns: 1fr auto 1fr;
+  position             : fixed;
+  top                  : 0;
+  left                 : 0;
+  width                : 100%;
   padding-top          : 15px;
+  padding-bottom       : 15px;
+  background           : #fff;
 
-  @media (max-width:theme('screens.sm')) {
-    padding-top: 8px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+  z-index      : theme('zIndex[3]');
+
+  @media (max-width:theme('screens.lg')) {
+    padding-top   : 8px;
+    padding-bottom: 8px;
   }
 
   &-nav {
@@ -88,6 +106,23 @@ body {
   &-contacts {
     display    : flex;
     align-items: center;
+  }
+
+  &-logo {
+    width     : 75px;
+    transition: .25s;
+
+    @media (max-width:theme('screens.lg')) {
+      width: 46px;
+    }
+  }
+
+  &:not(:is(.scroll-top &)) &-logo {
+    width: 30px;
+  }
+
+  &:not(:is(.scroll-top &)) {
+    border-bottom: 1px solid theme('colors.gray / 20%');
   }
 }
 
@@ -169,7 +204,7 @@ body {
 }
 
 
-.interior {
+.catalog {
   position      : relative;
   padding-top   : 82px;
   padding-bottom: 82px;
@@ -414,7 +449,7 @@ body {
     @media (max-width:theme('screens.xl')) {
       padding: 32px 15px;
 
-      .interior-item-plane {
+      .catalog-item-plane {
         height: 250px;
 
         img {
@@ -434,6 +469,14 @@ body {
   padding-bottom : 10px;
   background     : #000;
   color          : #fff;
+
+  @media (max-width:theme('screens.sm')) {
+    flex-direction: column;
+    padding-top   : 20px;
+    padding-bottom: 20px;
+    font-size     : 14px;
+    gap           : 6px;
+  }
 }
 
 .menu {
@@ -470,5 +513,135 @@ body {
   &:not(.toggle-active)~&-shadow {
     opacity       : 0;
     pointer-events: none;
+  }
+}
+
+.dialog-form {
+  width    : 574px;
+  max-width: 100%;
+  padding  : 58px 42px;
+
+  @media (max-width:theme('screens.sm')) {
+    padding: 40px 20px;
+  }
+}
+
+.dialog-product {
+  width    : 970px;
+  max-width: 100%;
+  padding  : 58px 42px;
+
+  @media (max-width:theme('screens.lg')) {
+    width: var(--section-width);
+  }
+
+  @media (max-width:theme('screens.sm')) {
+    padding: 40px 20px;
+  }
+}
+
+.product-detail {
+  display: flex;
+  gap    : 58px;
+
+  @media (max-width:theme('screens.lg')) {
+    flex-direction: column;
+  }
+
+  @media (max-width:theme('screens.sm')) {
+    gap: 24px;
+  }
+
+  &-image {
+    box-sizing  : border-box;
+    position    : relative;
+    width       : calc(50% - 58px / 2);
+    max-width   : 100%;
+    padding-left: 80px;
+
+    @media (max-width:theme('screens.lg')) {
+      width       : 400px;
+      margin-right: auto;
+      margin-left : auto;
+      padding     : 0;
+    }
+  }
+
+  &-thumbs {
+    position: absolute;
+    top     : 0;
+    left    : 0;
+    width   : 68px;
+    height  : 100%;
+
+    @media (max-width:theme('screens.lg')) {
+      display: none;
+    }
+  }
+
+  &-thumb {
+    box-sizing: border-box;
+    position  : relative;
+
+    &:is(.swiper-slide-thumb-active)::before {
+      content : '';
+      position: absolute;
+      inset   : 0;
+      border  : 6px solid #fff;
+    }
+
+    &:is(.swiper-slide-thumb-active)::after {
+      content : '';
+      position: absolute;
+      inset   : 0;
+      border  : 2px solid #2B2B2B;
+    }
+  }
+
+  &-slide {
+    box-sizing: border-box;
+    padding   : 18px;
+    background: #FFF;
+    border    : 6px solid #2B2B2B;
+    box-shadow: 7px 7px 3px 0 rgba(0, 0, 0, 0.40) inset, 0 3px 6px 0 rgba(0, 0, 0, 0.25);
+  }
+}
+
+.pray {
+  padding-top   : 80px;
+  padding-bottom: 80px;
+
+  @media (max-width:theme('screens.sm')) {
+    padding-bottom: 40px;
+  }
+
+  &-content {
+    position  : relative;
+    padding   : 80px 20px;
+    background: #000;
+    color     : #fff;
+
+    &::before {
+      content       : '';
+      display       : none;
+      position      : absolute;
+      inset         : 16px;
+      border        : 1px solid #FFF;
+      opacity       : 0.3;
+      pointer-events: none;
+
+      @media (max-width:theme('screens.lg')) {
+        display: block;
+        inset  : 8px;
+      }
+    }
+
+    @media (max-width:theme('screens.xl')) {
+      padding: 40px;
+    }
+
+    @media (max-width:theme('screens.sm')) {
+      padding: 40px 20px;
+    }
   }
 }
