--- a/src/ui/scss/Form.scss
+++ b/src/ui/scss/Form.scss
@@ -6,9 +6,10 @@
       display         : flex;
       flex-grow       : 1;
       position        : relative;
+      height          : var(--size);
       padding         : theme('spacing.2') theme('spacing.4');
       background-color: var(--bg3);
-      border          : 1px solid theme('colors.gray.DEFAULT / 20%');
+      border          : 1px solid theme('colors.gray / 20%');
       outline         : none !important;
       font-family     : var(--font-base);
       cursor          : inherit;
@@ -22,12 +23,12 @@
 
       &:disabled {
         background-color: var(--bg2);
-        border          : 1px solid theme('colors.gray.DEFAULT / 10%');
-        color           : theme('colors.gray.DEFAULT / 60%');
+        border          : 1px solid theme('colors.gray / 10%');
+        color           : theme('colors.gray / 60%');
         opacity         : .8;
 
         &:placeholder {
-          color: theme('colors.gray.DEFAULT / 60%');
+          color: theme('colors.gray / 60%');
         }
       }
 
@@ -98,7 +99,7 @@
       min-width    : var(--cover-width);
       height       : var(--cover-height);
       overflow     : hidden;
-      background   : theme('colors.gray.DEFAULT / 40%');
+      background   : theme('colors.gray / 40%');
       border-radius: 20px;
 
       &::before {
@@ -140,7 +141,7 @@
       height             : 18px;
       background         : var(--bg3);
       background-position: center;
-      border             : 1px solid theme('colors.gray.DEFAULT / 40%');
+      border             : 1px solid theme('colors.gray / 40%');
       border-radius      : 4px;
 
       .icon {
@@ -174,7 +175,7 @@
       height             : 18px;
       background         : var(--bg3);
       background-position: center;
-      border             : 1px solid theme('colors.gray.DEFAULT / 40%');
+      border             : 1px solid theme('colors.gray / 40%');
       border-radius      : 50%;
 
 
@@ -218,7 +219,7 @@
     &-field:hover &-checkbox-target,
     &-field:hover &-radio-target {
       @media (hover) {
-        box-shadow: 0 0 0 5px theme('colors.primary.DEFAULT / 10%');
+        box-shadow: 0 0 0 5px theme('colors.primary / 10%');
       }
     }
 
