--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -244,7 +244,7 @@ body {
     }
 
     &-plane {
-      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+      filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, .25));
 
       img {
         // opacity: 0;
